<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:visibility="visible"
        android:src="@drawable/plain" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/title"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="37dp"
        android:src="@drawable/play"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="end"
            android:layout_marginEnd="25dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:src="@drawable/logoumsi"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#16139a"
                android:gravity="end"
                android:textSize="9sp"
                android:text="@string/splash_feri_faculty"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="vertical"
            android:layout_marginStart="25dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:src="@drawable/logoietk"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#16139a"
                android:gravity="start"
                android:textSize="9sp"
                android:text="@string/splash_ietk"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="@string/splash_develop_sign"
        android:textColor="@color/colorWhite"
        android:textSize="11sp"/>


</RelativeLayout>