<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plain">

    <!--fake toolbar-->
    <RelativeLayout
        android:id="@+id/activity_layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/activity_textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/settings_title"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/activity_layout_user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_below="@id/activity_layout_toolbar">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/activity_image_profile"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/add_image"
            app:civ_border_color="@color/colorWhite"
            app:civ_border_width="2dp"/>

        <TextView
            android:id="@+id/activity_textview_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_image_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="Some name"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_textview_name"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/settings_total_games"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/settings_total_points"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/settings_language"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/totalGamesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="--"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/totalPointsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="--"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/activity_textview_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Slovenian"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/activity_layout_no_user_info"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:visibility="gone"
        android:layout_below="@id/activity_layout_toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textAlignment="center"
            android:text="@string/settings_no_profile"/>

    </RelativeLayout>

    <Button
        android:id="@+id/activity_logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:background="@null"
        android:text="LOG OUT"
        android:textColor="@color/colorWhite"
        android:textSize="11sp"/>

    <ImageView
        android:id="@+id/activity_button_back"
        android:layout_width="30dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:src="@drawable/ic_arrow_back_white_36dp"/>

</RelativeLayout>